--- a/citizentalk/issues/templates/issues/view.html
+++ b/citizentalk/issues/templates/issues/view.html
@@ -1,7 +1,7 @@
 {% extends "base_layout.html" %}
 
 {% block content %}
-    <div style="float: left">
+<div id="view-issue-content">
     <h1>{{ issue.title }}</h1>
 
     <p>{{ issue.description }}</p>
@@ -18,14 +18,34 @@
     {% for inst in institutions %}
         <b><a href="/institutions/{{ inst.id }}">{{ inst }}</a></b>
     {% endfor %}
-    </div>
+</div><!-- #view-issue-content -->
 
-    <div style="border: 1px solid black; margin: 20px; width: 300px; height: 300px;float: right"></div>
-    <div style="clear: both"></div>
+    <div id="map-view-issue">
+        <div id="map-view-issue-container">
+            <!-- -->
+        </div><!-- #map-view-issue-container -->
+
+    <script type="text/javascript" src="http://api.maps.yahoo.com/ajaxymap?v=3.8&appid=A89ep3fV34E7xmR7phcrGoALC_7by21vdTDllAAXHkWIT6ON_iQJbI6LOCndWbN0"></script>
+
+    <script type="text/javascript">  
+        var map = new YMap(document.getElementById('map-view-issue-container'));
+        var currentGeoPoint = new YGeoPoint({{ issue.latitude }}, {{ issue.longitude }});
+
+        map.addTypeControl();
+        map.addZoomLong();
+        map.addPanControl();
+        map.setMapType(YAHOO_MAP_HYB);
+        map.drawZoomAndCenter(currentGeoPoint, 12);
+
+        map.addMarker(currentGeoPoint);
+    </script>
+    </div><!-- map-view-issue -->
+
+    <div class="clear">
+        <!-- -->
+    </div><!-- .clear -->
 
     <hr style="margin-top: 50px;" />
     Here should be comments! 
     <br /><br /><br />
-
 {% endblock %}
-
