BREAK EVERYTHING IN THE APP

--- a/citizentalk/issues/templates/issues/view.html
+++ b/citizentalk/issues/templates/issues/view.html
@@ -63,7 +63,22 @@
     <form action="/issues/view/{{ issue.id }}/attachments">
         
     </form>
+    <div>
+        <ul id="issue-attachments">
+            {% for attachment in issue_attachments %}
+                <li>
+                    <a href="/media/{{ attachment.file.url }}">{{ attachment.title }}</a>
+                </li>
+            {% endfor %}
+        </ul>
 
+        <form id="add-issue-attachment" action="/issues/view/{{ issue.id }}/attachments" enctype="multipart/form-data" method="POST">
+            <legend>Add a new attachment</legend>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Add" />
+        </form>
+    </div>
 
     {% render_comment_list for issue %}
 
