--- a/citizentalk/dashboard/static/style.css
+++ b/citizentalk/dashboard/static/style.css
@@ -313,6 +313,10 @@ td.issue-user {
     width: 450px;
     padding: 10px;
     float: right;
+    border : 1px solid #eeeeee;
+    border-radius : 5px 5px 5px 5px;
+
+    padding : 10px 10px 10px 10px;
 }
 
 #comments {
@@ -327,9 +331,16 @@ td.issue-user {
 
 #issue-attachments {
     list-style: none;
+    margin: 0px;
 }
 
 #add-issue-attachment {
+    border: none;
+}
+
+#add-issue-attachment {
+    padding: 0px;
+    border: none;
     margin: 0px;
-    padding: .5em;
+    width: 100%;
 }
